--- a/.github/workflows/deploy-test-file.yml
+++ b/.github/workflows/deploy-test-file.yml
@@ -23,7 +23,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4
         with:
           server: ${{ secrets.URL }}
-          username: ${{ secrets.ACC }}
+          username: ${{ secrets.ACCOUNT }}
           password: ${{ secrets.PASS }}
           protocol: ftp
           local-dir: ./
