add cache; add signal success step; test new payload

--- a/.github/workflows/deploy-test-file.yml
+++ b/.github/workflows/deploy-test-file.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: 'npm'
 
       # Upload to FTP (only runs if previous steps succeed)
       - name: Deploy to FTP
@@ -31,4 +32,6 @@ jobs:
           # Upload only specific files/directories
           include: |
             testpayload.txt
-          log-level: verbose
+          # log-level: verbose
+      - name: Signal Success
+        run: echo 'File successfuly deployed' 
